[package]
name = "lib"
version = "0.1.0"
edition = "2021"

[dependencies]
sp1-zkvm = { version = "3.0.0-rc4", optional = true, default-features = false, features = ['lib']}
sp1-sdk = { version = "3.0.0", optional = true, default-features = false}
risc0-zkvm = { version = "1.1.2", optional = true, default-features = false, features = ['std'] }

[features]
sp1 = ["sp1-zkvm"]
sdk-sp1 = ["sp1-sdk"]
risczero = ["risc0-zkvm"]
